added week 9 and 10

--- a/Lectures/Week8/dev_int-L15_Oct23.Rmd
+++ b/Lectures/Week8/dev_int-L15_Oct23.Rmd
@@ -471,7 +471,7 @@ BU is fun as well.
 ```css
 /* styles.css */
 
-#css {
+#EMS {
 width: 70%;
 height: 50px;
 }
@@ -518,7 +518,7 @@ BU is fun as well.
 ```css
 /* styles.css */
 
-#css {
+#EMS {
 width: 70%;
 height: 50px;
 }
